--- a/phonegap/assets/www/index.html
+++ b/phonegap/assets/www/index.html
@@ -5,16 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <link rel="stylesheet" href="jquery.mobile-1.1.1.min.css" />
 		<script src="jquery-1.8.1.min.js"></script>
+		<script>
+		$(document).bind("mobileinit", function(){
+			  $.extend(  $.mobile , {
+				ajaxEnabled : false,
+			  });
+			});
+		</script>
 		<script src="jquery.mobile-1.1.1.min.js"></script>
 		<script type="text/javascript" charset="utf-8" src="cordova-2.0.0.js"></script>
-		<script src="js/main.js"></script>		
-		<script>
-			function prueba()
-			{
-			alert("I am an alert box!");
-			}
-			</script>
-			
+		<script src="js/main.js"></script>				
     </head>
 <body>
 <div data-role="page" id="index">  
