--- a/Vistas/index.html
+++ b/Vistas/index.html
@@ -36,8 +36,10 @@
 
         <div data-role="navbar">
             <ul>
-                <li><a href="#Config" data-icon="gear">Configuration</a></li>
-                <li><a href="#Contacts" data-icon="star">Contacts</a></li>
+                <li><a href="#Config"><img src="C:\Users\Denise\Desktop\2012-2\Aplicaciones Moviles\Proyecto\confg.png" 
+				alt="prueba" />Configuration</a></li>
+                <li><a href="#Contacts"><img src="C:\Users\Denise\Desktop\2012-2\Aplicaciones Moviles\Proyecto\contc.png" 
+				alt="prueba2" />Contacts</a></li>
             </ul>
         </div><!-- /navbar -->
         
